# VideoCapture

./: CMakeLists.txt  README.md
VideoConsumer/: CMakeLists.txt  ReceivedVideo.cpp  ReceivedVideo.h  main.cpp
VideoProducer/: CMakeLists.txt  UploadedVideo.cpp  UploadedVideo.h  main.cpp
